dubbo-demo/dubbo-demo-xds/services_remote.yaml
apiVersion: v1
kind: Service
metadata:
  name: dubbo-demo-xds-consumer-service
  labels:
    app: dubbo-demo-xds-consumer
    version: v1
    service: dubbo-demo-xds-consumer
spec:
  ports:
    - port: 50050
      targetPort: 50050
      name: tcp
    - port: 31000
      targetPort: 31000
      name: debug
  selector:
      app: dubbo-demo-xds-consumer
---
apiVersion: v1
kind: Service
metadata:
  name: dubbo-demo-xds-provider-service
  labels:
    app: dubbo-demo-xds-provider
    version: v1
    service: dubbo-demo-xds-provider
spec:
  ports:
    - port: 50051
      targetPort: 50051
      name: tcp
    - port: 31001
      targetPort: 31001
      name: debug
  selector:
    app: dubbo-demo-xds-provider

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dubbo-demo-xds-consumer
  labels:
    app: dubbo-demo-xds-consumer
    version: v1
    service: dubbo-demo-xds-consumer
spec:
  selector:
    matchLabels:
      app: dubbo-demo-xds-consumer
      version: v1
  template:
    metadata:
      labels:
        app: dubbo-demo-xds-consumer
        version: v1
    spec:
      serviceAccountName: dubbo-demo-xds-consumer
      containers:
        - name: dubbo-demo-xds-consumer
          image: localhost:5000/dubbo-demo-xds-consumer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50050
            - containerPort: 31000  #for JVM remote debug
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dubbo-demo-xds-provider
  labels:
    app: dubbo-demo-xds-provider
    version: v1
    service: dubbo-demo-xds-provider
spec:
  selector:
    matchLabels:
      app: dubbo-demo-xds-provider
      version: v1
  template:
    metadata:
      labels:
        app: dubbo-demo-xds-provider
        version: v1
    spec:
      serviceAccountName: dubbo-demo-xds-provider
      containers:
        - name: dubbo-demo-xds-provider
          image: localhost:5000/dubbo-demo-xds-provider:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051 #for JVM remote debug
            - containerPort: 31001
  replicas: 1

#Security configs
