dubbo-demo/dubbo-demo-xds/consumer-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dubbo-demo-xds-consumer
  namespace: dubbo-proxyless
  labels:
    app: dubbo-demo-xds-consumer
    version: v1
    service: dubbo-demo-xds-consumer
spec:
  ports:
    - port: 50050
      targetPort: 50050
      name: grpc
    - port: 31000
      targetPort: 31000
      name: debug
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: dubbo-demo-xds-consumer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dubbo-demo-xds-consumer
  namespace: dubbo-proxyless
  labels:
    app: dubbo-demo-xds-consumer
    version: v1
    service: dubbo-demo-xds-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dubbo-demo-xds-consumer
      version: v1
  template:
    metadata:
      labels:
        app: dubbo-demo-xds-consumer
        version: v1
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      imagePullSecrets:
        - name: aliyun-acr-secret
      containers:
        - name: dubbo-demo-xds-consumer
          image: crpi-ta376u07gp1439ff.cn-beijing.personal.cr.aliyuncs.com/test_xds/test_dubbo_consumer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50050
              name: grpc
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: bootstrap-config
              mountPath: /app/bootstrap.json
              subPath: bootstrap.json
      volumes:
        - name: bootstrap-config
          emptyDir: {}

---
# Istio DestinationRule
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: dubbo-demo-xds-consumer-dr
  namespace: dubbo-proxyless
spec:
  host: dubbo-demo-xds-consumer.dubbo-proxyless.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
