dubbo-demo/dubbo-demo-xds/traffic-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: provider-versions
  namespace: dubbo-proxyless
spec:
  host: dubbo-demo-xds-provider.dubbo-proxyless.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: provider-weights
  namespace: dubbo-proxyless
spec:
  hosts:
  - dubbo-demo-xds-provider.dubbo-proxyless.svc.cluster.local
  http:
  - route:
    - destination:
        host: dubbo-demo-xds-provider.dubbo-proxyless.svc.cluster.local
        subset: v1
        port:
          number: 50051
      weight: 20
    - destination:
        host: dubbo-demo-xds-provider.dubbo-proxyless.svc.cluster.local
        subset: v2
        port:
          number: 50051
      weight: 80
